--- a/public/assets/css/settings.css
+++ b/public/assets/css/settings.css
@@ -444,9 +444,6 @@
   }
 
   .tooltip-text {
-    left: auto;
-    right: 0;
-    transform: none;
     width: min(300px, calc(100vw - 48px));
   }
 }
